# TaskManager

./: Dockerfile  Makefile  pyproject.toml
app/application/api/: main.py
docker_compose/: app.yaml  storages.yaml
